--- a/store.html
+++ b/store.html
@@ -1,115 +1,184 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <title>Megu Donni Store</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="images/logo.svg?v=2">
 
-  <!-- Font Awesome for Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+  <style>
+    .navbar{
+      position:sticky; top:0; z-index:1000;
+      background:#fff; box-shadow:0 1px 6px rgba(0,0,0,.06);
+      display:flex; align-items:center; justify-content:space-between;
+      padding:12px 16px;
+    }
+    .logo a{ text-decoration:none; font-weight:700; color:#111; }
+    .nav-right{ display:flex; align-items:center; gap:12px; }
+    .nav-links{ list-style:none; margin:0; padding:0; display:flex; gap:16px; }
+    .nav-links a{ text-decoration:none; color:#333; padding:6px 8px; border-radius:8px; }
+    .nav-links a:hover{ background:#f2f2f2; }
+    .social-icons{ display:flex; align-items:center; gap:12px; margin-left:8px; }
+    .social-icons a.youtube{ color:#FF0000; }
+    .social-icons a.tiktok{ color:#000000; }
+    .social-icons a.instagram{ color:#E4405F; }
+    .social-icons a.twitter{ color:#000000; }
+    .social-icons a:hover{ transform:scale(1.15); opacity:.85; }
+    .menu-toggle{ display:none; font-size:26px; cursor:pointer; }
+    @media (max-width:768px){
+      .menu-toggle{ display:block; }
+      .nav-links{
+        position:absolute; left:0; right:0; top:56px;
+        background:#fff; border-top:1px solid #eee;
+        display:none; flex-direction:column; padding:8px 16px;
+      }
+      .nav-links.active{ display:flex; }
+    }
+    .store-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:16px;
+      padding:32px 16px;
+    }
+    .store-card{
+      border:1px solid #eee; border-radius:12px;
+      overflow:hidden; background:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.05);
+      display:flex; flex-direction:column;
+      transition:transform 0.2s ease;
+    }
+    .store-card:hover{ transform:translateY(-4px); }
+    .store-card img{
+      width:100%; height:auto; display:block;
+      object-fit:cover;
+    }
+    .store-card a{
+      text-decoration:none; text-align:center;
+      padding:12px; font-weight:500; color:#333;
+    }
+    .footer{
+      padding:16px 0; background:#f9f9f9;
+      border-top:1px solid #eee; margin-top:40px;
+    }
+    .footer a{ color:#333; text-decoration:none; }
+    .footer a:hover{ text-decoration:underline; }
+  </style>
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <h1>Megu Donni Store</h1>
-    <nav>
-      <a href="index.html#hero">Home</a>
-      <a href="index.html#about">About</a>
-      <a href="index.html#gallery">Gallery</a>
-      <a href="store.html" class="active">Store</a>
-      <a href="index.html#subscribe">Subscribe</a>
-      <a href="index.html#contact">Contact</a>
-    </nav>
-    <!-- Social Icons -->
-    <div style="display:flex;gap:10px;">
-      <a href="https://www.youtube.com/@MeguDonni" target="_blank"><i class="fab fa-youtube" style="font-size:20px;color:#FF0000"></i></a>
-      <a href="https://www.tiktok.com/@megudonni" target="_blank"><i class="fab fa-tiktok" style="font-size:20px;color:#000"></i></a>
-      <a href="https://www.instagram.com/cutemegalodon/" target="_blank"><i class="fab fa-instagram" style="font-size:20px;color:#C13584"></i></a>
-      <a href="https://x.com/MeguDonni" target="_blank"><i class="fab fa-x-twitter" style="font-size:20px;color:#000"></i></a>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo"><a href="/">Megu Donni</a></div>
+    <div class="nav-right">
+      <ul class="nav-links" id="navLinks">
+        <li><a href="index.html#hero">Home</a></li>
+        <li><a href="index.html#about">About</a></li>
+        <li><a href="index.html#gallery">Gallery</a></li>
+        <li><a href="store.html">Store</a></li>
+        <li><a href="index.html#subscribe">Subscribe</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+      <div class="social-icons">
+        <a href="https://www.youtube.com/@MeguDonni" target="_blank" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://www.tiktok.com/@megudonni" target="_blank" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.instagram.com/cutemegalodon/" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://x.com/MeguDonni" target="_blank" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+      </div>
+      <div class="menu-toggle" id="menuToggle">&#9776;</div>
     </div>
-  </div>
-</header>
+  </nav>
 
-<!-- STORE CONTENT -->
-<main class="container" style="margin-top:30px;">
+  <!-- Store Grid -->
+  <section class="store-grid">
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-1.jpg" alt="Collection 1">
+        Collection 1
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-2.jpg" alt="Collection 2">
+        Collection 2
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-3.jpg" alt="Collection 3">
+        Collection 3
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-4.jpg" alt="Collection 4">
+        Collection 4
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-5.jpg" alt="Collection 5">
+        Collection 5
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-6.jpg" alt="Collection 6">
+        Collection 6
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-7.jpg" alt="Collection 7">
+        Collection 7
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-8.jpg" alt="Collection 8">
+        Collection 8
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-9.jpg" alt="Collection 9">
+        Collection 9
+      </a>
+    </div>
+    <div class="store-card">
+      <a href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank">
+        <img src="images/collections/col-10.jpg" alt="Collection 10">
+        Collection 10
+      </a>
+    </div>
+  </section>
 
-  <h2 style="text-align:center;margin-bottom:30px;">Collections</h2>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+      <div>© <span id="y"></span> Megu Donni</div>
+      <div>
+        <a href="index.html#hero">Home</a> ·
+        <a href="index.html#about">About</a> ·
+        <a href="index.html#gallery">Gallery</a> ·
+        <a href="store.html">Store</a> ·
+        <a href="index.html#subscribe">Subscribe</a> ·
+        <a href="index.html#contact">Contact</a> ·
+        <a href="/privacy.html">Privacy Policy</a> ·
+        <a href="/terms.html">Terms &amp; Conditions</a>
+      </div>
+    </div>
+  </footer>
 
-  <div class="grid">
-    <!-- Collection 1 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-1.jpg" alt="Collection 1"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 2 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-2.jpg" alt="Collection 2"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=Aydemir71-&collections=4328906&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 3 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-3.jpg" alt="Collection 3"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328909&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 4 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-4.jpg" alt="Collection 4"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328911&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 5 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-5.jpg" alt="Collection 5"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328912&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 6 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-6.jpg" alt="Collection 6"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328945&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 7 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-7.jpg" alt="Collection 7"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4328996&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 8 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-8.jpg" alt="Collection 8"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4329022&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 9 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-9.jpg" alt="Collection 9"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4331871&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-    <!-- Collection 10 -->
-    <div class="card">
-      <div class="thumb"><img src="images/collections/col-10.jpg" alt="Collection 10"></div>
-      <a class="btn" href="https://www.redbubble.com/people/aydemir71-/shop?artistUserName=aydemir71-&collections=4332076&iaCode=all-departments&sortOrder=top%20selling" target="_blank">View</a>
-    </div>
-  </div>
-</main>
-
-<!-- FOOTER -->
-<footer class="footer" style="margin-top:40px;">
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="y"></span> Megu Donni</div>
-    <div>
-      <a href="index.html#hero">Home</a> ·
-      <a href="index.html#about">About</a> ·
-      <a href="index.html#gallery">Gallery</a> ·
-      <a href="store.html">Store</a> ·
-      <a href="index.html#subscribe">Subscribe</a> ·
-      <a href="index.html#contact">Contact</a>
-    </div>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("y").textContent = new Date().getFullYear();
-</script>
-
+  <script>
+    const toggle = document.getElementById('menuToggle');
+    const links = document.getElementById('navLinks');
+    if (toggle && links) toggle.addEventListener('click', () => links.classList.toggle('active'));
+    document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
