--- a/store.html
+++ b/store.html
@@ -70,6 +70,28 @@
   </style>
 </head>
 <body>
+<header class="header">
+  <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
+    
+    <!-- LOGO -->
+    <div class="logo">
+      <a href="/"><img src="images/logo.png" alt="Megu Donni Logo" style="height:40px;"></a>
+    </div>
+
+    <!-- NAV -->
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="/#about">About</a>
+      <a href="/#gallery">Gallery</a>
+      <a href="store.html" class="active">Store</a>
+      <a href="/#subscribe">Subscribe</a>
+      <a href="/#contact">Contact</a>
+    </nav>
+
+    <!-- SOCIAL ICONS -->
+    <div class="social-icons" style="display:flex;gap:10px;">
+      <a href="https://www.youtube.com/@MeguDonni" target="_blank">
+        <img src="images/icons/youtube.svg"
 
   <!-- Navbar -->
   <nav class="navbar">
