--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#gallery">Gallery</a></li>
-          <li><a href="store.html">Store</a></li>
+          <li class="nav-store"><a href="store.html">Store</a></li>
           <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
 
         <!-- Sosyal ikonlar (sağ üst) -->
-        <div class="social-icons">
+       <a class="store-quick" href="store.html" aria-label="Store">Store</a> <div class="social-icons">
           <a href="https://www.youtube.com/@MeguDonni" target="_blank" aria-label="YouTube" class="youtube"><i class="fa-brands fa-youtube"></i></a>
           <a href="https://www.tiktok.com/@megudonni" target="_blank" aria-label="TikTok" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
           <a href="https://www.instagram.com/cutemegalodon/" target="_blank" aria-label="Instagram" class="instagram"><i class="fa-brands fa-instagram"></i></a>
