--- a/index.html
+++ b/index.html
@@ -207,5 +207,9 @@
       window.addEventListener("load", () => navigator.serviceWorker.register("/service-worker.js"));
     }
   </script>
+  <form name="subscribe" netlify hidden>
+  <input type="email" name="email">
+</form>
+
 </body>
 </html>
