--- a/index.html
+++ b/index.html
@@ -143,15 +143,14 @@
       netlify-honeypot="bot-field"
       action="/thanks/">
   <input type="hidden" name="form-name" value="subscribe">
-  <p style="display:none">
-    <label>Don’t fill this out: <input name="bot-field"></label>
-  </p>
-  <div style="display:flex; gap:8px; flex-wrap:wrap">
+  <p style="display:none"><label>Don’t fill this out: <input name="bot-field"></label></p>
+  <div style="display:flex;gap:8px;flex-wrap:wrap">
     <input type="email" name="email" placeholder="you@example.com" required
-           style="flex:1; min-width:220px; padding:12px 14px; border-radius:10px; border:1px solid #ddd">
+           style="flex:1;min-width:220px;padding:12px 14px;border-radius:10px;border:1px solid #ddd">
     <button class="btn" type="submit">Subscribe</button>
   </div>
 </form>
+
 
 
       <!-- Yedek yönlendirme -->
