--- a/index.html
+++ b/index.html
@@ -214,5 +214,9 @@
       window.addEventListener("load", () => navigator.serviceWorker.register("/service-worker.js"));
     }
   </script>
+  <form name="subscribe" data-netlify="true" netlify-honeypot="bot-field" hidden>
+  <input type="email" name="email">
+</form>
+
 </body>
 </html>
