--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
           <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
+        <li><a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">Gallery</a></li>
+
 
         <!-- Mobil için hızlı Store -->
         <a class="store-quick" href="store.html" aria-label="Store">Store</a>
@@ -222,6 +224,7 @@
         <a href="#hero">Home</a> ·
         <a href="#about">About</a> ·
         <a href="#gallery">Gallery</a> ·
+        <a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">View Full Gallery</a> ·
         <a href="store.html">Store</a> ·
         <a href="#subscribe">Subscribe</a> ·
         <a href="#contact">Contact</a> ·
