--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
            <li><a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">Gallery</a></li>
-          <li class="nav-store"><a href="store.html">Store</a></li>
+          <li class="nav-store"><a href="collections.html">Collections</a></li>
           <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -108,7 +108,7 @@
 
 
         <!-- Mobil için hızlı Store -->
-        <a class="store-quick" href="store.html" aria-label="Store">Store</a>
+        <a class="store-quick" href="collections.html" aria-label="Collections">Collections</a>
 
         <!-- Sosyal ikonlar -->
         <div class="social-icons">
@@ -224,7 +224,7 @@
         <a href="#hero">Home</a> ·
         <a href="#about">About</a> ·
         <a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">View Full Gallery</a> ·
-        <a href="store.html">Store</a> ·
+        <a href="collections.html">Collections</a> .
         <a href="#subscribe">Subscribe</a> ·
         <a href="#contact">Contact</a> ·
         <a href="/privacy.html">Privacy Policy</a> ·
