--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div>
         <a href="#hero">Home</a> ·
         <a href="#about">About</a> ·
-        <a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">View Full Gallery</a> ·
+        <a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent ·
         <a href="collections.html">Collections</a> .
         <a href="#subscribe">Subscribe</a> ·
         <a href="#contact">Contact</a> ·
