--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="#hero">Home</a> ·
         <a href="#about">About</a> ·
         <a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent ·
-        <a href="collections.html">Collections</a> .
+        <a href="https://www.redbubble.com/people/Aydemir71-/shop?asc=u&ref=account-nav-dropdown .
         <a href="#subscribe">Subscribe</a> ·
         <a href="#contact">Contact</a> ·
         <a href="/privacy.html">Privacy Policy</a> ·
