--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
            <li><a href="https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent" target="_blank">Gallery</a></li>
-          <li class="nav-store"><a href="collections.html">Collections</a></li>
-          <li><a href="#subscribe">Subscribe</a></li>
+           <li><a href="https://www.redbubble.com/people/Aydemir71-/shop?asc=u&ref=account-nav-dropdown" target="_blank">Collections</a></li>
+           <li><a href="#subscribe">Subscribe</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
        
