--- a/index.html
+++ b/index.html
@@ -187,20 +187,20 @@
       seeAllUrl: '#',
       posts: [
         {
-          title: 'Başlık 1',
+          title: 'Post Title 1',
           date: '2025-08-09',
-          tag: 'Güncelleme',
-          excerpt: 'Kısa açıklama 1...',
+          tag: 'Update',
+          excerpt: 'Short description 1...',
           url: '#',
-          ctaLabel: 'Devamını oku'
+          ctaLabel: 'Read more'
         },
         {
-          title: 'Başlık 2',
+          title: 'Post Title 2',
           date: '2025-08-05',
-          tag: 'Bilgi',
-          excerpt: 'Kısa açıklama 2...',
+          tag: 'Info',
+          excerpt: 'Short description 2...',
           url: '#',
-          ctaLabel: 'Devamını oku'
+          ctaLabel: 'Read more'
         }
       ]
     };
@@ -215,7 +215,7 @@
     }
 
     function formatDate(iso) {
-      try { return new Date(iso).toLocaleDateString('tr-TR', { year:'numeric', month:'short', day:'2-digit' }); }
+      try { return new Date(iso).toLocaleDateString('en-US', { year:'numeric', month:'short', day:'2-digit' }); }
       catch { return iso; }
     }
 
@@ -223,11 +223,11 @@
       const card = document.createElement('article');
       card.className = 'card';
       card.innerHTML = `
-        <div class="eyebrow">${p.tag || 'Güncelleme'}</div>
+        <div class="eyebrow">${p.tag || 'Update'}</div>
         <h3 class="title">${p.title}</h3>
         <p class="excerpt">${p.excerpt}</p>
         <div class="meta">${formatDate(p.date)}</div>
-        <a class="btn" href="${p.url}" target="_blank">${p.ctaLabel || 'Devamını oku'}</a>
+        <a class="btn" href="${p.url}" target="_blank">${p.ctaLabel || 'Read more'}</a>
       `;
       return card;
     }
@@ -236,6 +236,7 @@
   </script>
 </body>
 </html>
+
 
   <!-- SUBSCRIBE (AJAX gönderim + dummy form) -->
   <section id="subscribe" class="section">
