--- a/index.html
+++ b/index.html
@@ -187,20 +187,20 @@
       seeAllUrl: '#',
       posts: [
         {
-          title: 'Post Title 1',
-          date: '2025-08-09',
+          title: 'New Artwork Series: Ocean Dreams',
+          date: '2025-08-10',
           tag: 'Update',
-          excerpt: 'Short description 1...',
-          url: '#',
-          ctaLabel: 'Read more'
+          excerpt: 'A fresh collection inspired by the movement and colors of the sea, now available in my Redbubble shop.',
+          url: 'https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent',
+          ctaLabel: 'View Collection'
         },
         {
-          title: 'Post Title 2',
-          date: '2025-08-05',
-          tag: 'Info',
-          excerpt: 'Short description 2...',
+          title: 'Site Update: Mini Blog Launch',
+          date: '2025-08-01',
+          tag: 'Announcement',
+          excerpt: 'Introducing a small space on the homepage to share updates, news, and creative insights directly with visitors.',
           url: '#',
-          ctaLabel: 'Read more'
+          ctaLabel: 'Learn More'
         }
       ]
     };
@@ -236,6 +236,7 @@
   </script>
 </body>
 </html>
+
 
 
   <!-- SUBSCRIBE (AJAX gönderim + dummy form) -->
