--- a/index.html
+++ b/index.html
@@ -165,10 +165,12 @@
     .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px; }
     .header h2 { margin: 0; }
     .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 16px; }
-    .card { background: white; border-radius: 8px; padding: 18px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    .card { background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 6px rgba(0,0,0,0.1); display: flex; flex-direction: column; }
+    .card img { width: 100%; height: 160px; object-fit: cover; }
+    .card-content { padding: 18px; flex: 1; display: flex; flex-direction: column; }
     .eyebrow { font-size: 12px; color: #777; text-transform: uppercase; }
     .title { margin: 8px 0; font-size: 18px; }
-    .excerpt { font-size: 14px; color: #555; }
+    .excerpt { font-size: 14px; color: #555; flex: 1; }
     .meta { font-size: 12px; color: #999; margin-top: 8px; }
     .btn { display: inline-block; margin-top: 12px; padding: 6px 10px; background: #0073e6; color: white; text-decoration: none; border-radius: 4px; font-size: 13px; }
   </style>
@@ -192,7 +194,8 @@
           tag: 'Update',
           excerpt: 'A fresh collection inspired by the movement and colors of the sea, now available in my Redbubble shop.',
           url: 'https://www.redbubble.com/people/Aydemir71-/explore?asc=u&page=1&sortOrder=recent',
-          ctaLabel: 'View Collection'
+          ctaLabel: 'View Collection',
+          image: 'https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80'
         },
         {
           title: 'Site Update: Mini Blog Launch',
@@ -200,7 +203,8 @@
           tag: 'Announcement',
           excerpt: 'Introducing a small space on the homepage to share updates, news, and creative insights directly with visitors.',
           url: '#',
-          ctaLabel: 'Learn More'
+          ctaLabel: 'Learn More',
+          image: 'https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?auto=format&fit=crop&w=800&q=80'
         }
       ]
     };
@@ -222,12 +226,16 @@
     function createCard(p) {
       const card = document.createElement('article');
       card.className = 'card';
+      let imgHTML = p.image ? `<img src="${p.image}" alt="${p.title}">` : '';
       card.innerHTML = `
-        <div class="eyebrow">${p.tag || 'Update'}</div>
-        <h3 class="title">${p.title}</h3>
-        <p class="excerpt">${p.excerpt}</p>
-        <div class="meta">${formatDate(p.date)}</div>
-        <a class="btn" href="${p.url}" target="_blank">${p.ctaLabel || 'Read more'}</a>
+        ${imgHTML}
+        <div class="card-content">
+          <div class="eyebrow">${p.tag || 'Update'}</div>
+          <h3 class="title">${p.title}</h3>
+          <p class="excerpt">${p.excerpt}</p>
+          <div class="meta">${formatDate(p.date)}</div>
+          <a class="btn" href="${p.url}" target="_blank">${p.ctaLabel || 'Read more'}</a>
+        </div>
       `;
       return card;
     }
@@ -237,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
