--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     /* Subscribe butonu */
     .btn{ background:#ff4b4b; color:#fff; border:none; border-radius:10px; padding:12px 16px; cursor:pointer; }
     .btn:hover{ background:#e63c3c; }
+    <meta name="google-site-verification" content="KqnJNy2tVoJBTQl0vslKjPJ9K2cQDELEPZk-3ZRzIwc" />
   </style>
 </head>
 <body>
