--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
     .btn:hover{ background:#e63c3c; }
     <meta name="google-site-verification" content="KqnJNy2tVoJBTQl0vslKjPJ9K2cQDELEPZk-3ZRzIwc" />
   </style>
+
+  <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#0a0a0a">
+
+<!-- iOS için (Safari) -->
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 </head>
 <body>
 
