--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <a href="https://www.tiktok.com/@megudonni" target="_blank" aria-label="TikTok" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
           <a href="https://www.instagram.com/cutemegalodon/" target="_blank" aria-label="Instagram" class="instagram"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://x.com/MeguDonni" target="_blank" aria-label="X" class="twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://www.pinterest.com/youraccount" class="pinterest" target="_blank"><i class="fab fa-pinterest"></i></a>
+          <a href="https://tr.pinterest.com/megudonni/" class="pinterest" target="_blank"><i class="fab fa-pinterest"></i></a>
+
         </div>
 
         <div class="menu-toggle" id="menuToggle">&#9776;</div>
