--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
     </div>
   </section>
 
+  <section id="rb-portfolio" style="max-width:1100px;margin:40px auto;padding:0 16px;">
+  <h2 style="font:600 1.6rem/1.2 system-ui;margin:0 0 16px;">Redbubble Tasarımlarım</h2>
+  <!-- Redbubble embed başlıyor -->
+  <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
+  <script id="rb-embed" type="text/javascript">
+    new RBExternalPortfolio('www.redbubble.com', 'aydemir71-', 2, 2).renderIframe();
+  </script>
+  <!-- Redbubble embed bitiyor -->
+</section>
+
   <!-- GALLERY -->
   <section id="gallery" class="section">
     <div class="container">
